# ispc-raster

./: CMakeLists.txt  model.v
kernel/: clear.ispc
src/: main.c  rmath.h
